--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.552.0",
     "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
-    "colord": "https://aistudiocdn.com/colord@^2.9.3"
+    "colord": "https://aistudiocdn.com/colord@^2.9.3",
+    "recharts/": "https://aistudiocdn.com/recharts@^3.3.0/"
   }
 }
 </script>
